--- a/requirements.txt
+++ b/requirements.txt
@@ -48,6 +48,7 @@ pyasn1_modules==0.4.1
 pydantic==2.9.2
 pydantic_core==2.23.4
 pyparsing==3.2.0
+python-dotenv==1.0.1
 PyYAML==6.0.2
 redis==5.2.0
 regex==2024.11.6
